Revision history for MooseX-Types

0.17    Tue Aug 18 02:32:31 EDT 2009
        - Documentation typo fix (Dave Rolsky).
        - Stop blowing up in has_available_type_export if the introspected code
          symbol exists but is not a type export (Florian Ragwitz).
        - Reorganize author/copyright sections at the request of Debian
          packagers (Rafael Kitover).

0.16    Mon Jun 29 10:50:41 PDT 2009
        - Ship with Module::Install 0.91

0.15    Sun Jun 27 15:50:00 EDT 2009
        - Change all uses of croak in TypeDecorator to use the Moose
          throw_exception method.
        - More test cases for the union mixed string type issue, and
          better handling of this in the | overload in TypeDecorator

0.14    Fri Jun 26 17:52:20 PDT 2009
        - Fix union with string type

0.13    Tue Jun 23 05:46:33 PDT 2009
        - Add Test::Moose to build_requires for Fedora

0.12    Sun Jun 14 14:39:57 PDT 2009
        - fix mixing of typelibs with regular Moose classes

0.11    Sat May 23 18:02:35 PDT 2009
        - warning on string types and unregistered class/role types
        - better error for missing comma
        - MooseX::Types::Combine for combining type libs

0.10    Fri March 06 17:34:00 EST 2009
        - Removed unneeded debugging code from one of the tests, which was
          causing installation errors for people that didn't already have
          Data::Dump installed. (jjnapiork)
0.09    ...
        - Added MooseX::Types::Util::has_available_type_export($p, $n) to
          allow introspection of available types for other libraries wanting
          to use type export names for type specifications.

0.08    Mon Dec  09 19:00:00 EST 2008
        - Added experimental support for recursive type constraints.  Pod and
          tests for this feature.  Let the madness begin.
        - Documentation updates.
        - Workaround test case for the SUb::Exporter compatibility issue.  Also
          documented in Pod.
